--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "0.1.1",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.3.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "1.0.12",
-    "reactstrap": "^8.0.0"
+    "react-scripts": "1.0.12"
   },
   "scripts": {
     "start": "react-scripts start",
