--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "1.0.12"
+    "react-scripts": "1.0.12",
+    "react-transition-group": "^4.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
